# DouyinModerator

./: .gitignore  CMakeLists.txt  README.md  WINDOWS.md  build_windows.bat  vcpkg.json
proto/: CMakeLists.txt  douyin.proto
src/: main.cpp
src/core/: AppSettings.cpp  AppSettings.h  AutoResponseEngine.cpp  AutoResponseEngine.h  BarrageSender.cpp  BarrageSender.h  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  EmojiResolver.cpp  EmojiResolver.h  HttpRequester.cpp  HttpRequester.h  LoginManager.cpp  LoginManager.h  MessageRouter.cpp  MessageRouter.h  ProtobufDecoder.cpp  ProtobufDecoder.h  TimerEngine.cpp  TimerEngine.h
src/models/: AutoResponseRule.h  CMakeLists.txt  LiveEvent.h  RoomInfo.h
src/ui/: CMakeLists.txt  ConfigPanel.cpp  ConfigPanel.h  EventLogPanel.cpp  EventLogPanel.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RuleEditorPanel.cpp  RuleEditorPanel.h
